feat: add header content

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             <i class="fa-solid fa-battery-three-quarters"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
-
     </div>
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to KakaoTalk</h1>
+        <p class="welcome-header__text"></p>If you have a Kakao Account, log in with your email or phone number.</p>
+    </header>
     <script src="https://kit.fontawesome.com/c837dd69e3.js" crossorigin="anonymous"></script>
-    
 </body>
 </html>
