--- a/index.html
+++ b/index.html
@@ -23,10 +23,19 @@
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
+
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to KakaoTalk</h1>
         <p class="welcome-header__text"></p>If you have a Kakao Account, log in with your email or phone number.</p>
     </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number"/>
+        <input type="password" placeholder="Password"/>
+        <input type="submit" value= "Log In"/>
+        <a href="#">Find kakao Account or Password</a>
+    </form>
+    
     <script src="https://kit.fontawesome.com/c837dd69e3.js" crossorigin="anonymous"></script>
 </body>
 </html>
