--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="status-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span>No service</span>
             <i class="fa-solid fa-wifi"></i>
@@ -19,23 +20,23 @@
         <div class="status-bar__column"> 
             <!-- icon  -->
             <span>11%</span>
-            <i class="fa-solid fa-battery-three-quarters"></i>
+            <i class="fa-solid fa-battery fa-lg"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
 
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to KakaoTalk</h1>
-        <p class="welcome-header__text"></p>If you have a Kakao Account, log in with your email or phone number.</p>
+        <p class="welcome-header__text">If you have a Kakao Account,<br>log in with your email or phone number.</p>
     </header>
 
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number"/>
-        <input type="password" placeholder="Password"/>
+    <form action="friend.html" method="get" id="login-form">
+        <input name="username" type="text" placeholder="Email or phone number"/>
+        <input name="password" type="password" placeholder="Password"/>
         <input type="submit" value= "Log In"/>
         <a href="#">Find kakao Account or Password</a>
     </form>
-    
+
     <script src="https://kit.fontawesome.com/c837dd69e3.js" crossorigin="anonymous"></script>
 </body>
 </html>
