style: 파일 구조 수정 및 오타 수정

--- a/more.html
+++ b/more.html
@@ -129,6 +129,9 @@
             </li>
         </ul>
     </nav>
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
     <script src="https://kit.fontawesome.com/c837dd69e3.js" crossorigin="anonymous"></script>
 </body>
 
