--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         <input name="username" type="text" placeholder="Email or phone number"/>
         <input name="password" type="password" placeholder="Password"/>
         <input type="submit" value= "Log In"/>
-        <a href="#">Find kakao Account or Password</a>
+        <a href="friends.html">Find kakao Account or Password</a>
     </form>
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/c837dd69e3.js" crossorigin="anonymous"></script>
 </body>
