--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
 
     <header class="alt-header">
         <div class="alt-header__column">
-            <a href="more.html">
+            <a href="chats.html">
                 <i class="fa-solid fa-angle-left fa-lg"></i>
             </a>
         </div>
