--- a/more.html
+++ b/more.html
@@ -21,7 +21,7 @@
         </div>
         <div class="status-bar__column">
             <!-- icon  -->
-            <span>11%</span>
+            <span>100%</span>
             <i class="fa-solid fa-battery fa-lg"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="user-component__column">
-                <i class="fa-regular fa-message fa-2x"></i>
+                <i class="fa-regular fa-message fa-lg"></i>
             </div>
         </div> 
         <div class="icon-row">
@@ -80,19 +80,19 @@
             <div class="more-suggestions__icons">
                 <div class="more-suggestions__icon">
                     <div class="more-suggestions__icon-img">
-                        <i class="fa-solid fa-quote-right fa-2x"></i>
+                        <i class="fa-solid fa-quote-right fa-lg"></i>
                     </div>
                     <span class="more-suggestions__icon-name">Kakao Story</span>
                 </div>
                 <div class="more-suggestions__icon">
-                    <div class="more-suggestions__icon-img fa-2x">
+                    <div class="more-suggestions__icon-img fa-lg">
                         <i class="fa-solid fa-paw"></i>
                     </div>
                     <span class="more-suggestions__icon-name">Kakao friends</span>
                 </div>
                 <div class="more-suggestions__icon">
                     <div class="more-suggestions__icon-img">
-                        <i class="fa-solid fa-gamepad fa-2x"></i>
+                        <i class="fa-solid fa-gamepad fa-lg"></i>
                     </div>
                     <span class="more-suggestions__icon-name">Friends Game</span>
                 </div>
@@ -106,25 +106,25 @@
         <ul class="nav__list">  
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="fa-solid fa-user fa-2x"></i>
+                    <i class="fa-solid fa-user fa-lg"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav_noti badge">1</span>
-                    <i class="fa-regular fa-comment fa-2x"></i>
+                    <i class="fa-regular fa-comment fa-lg"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html">
-                    <i class="fas fa-magnifying-glass fa-2x"></i>
+                    <i class="fas fa-magnifying-glass fa-lg"></i>
                 </a>
                 </i>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
                     <span class="nav_important dot">•</span>
-                    <i class="fa-solid fa-ellipsis fa-2x"></i>
+                    <i class="fa-solid fa-ellipsis fa-lg"></i>
                 </a>
             </li>
         </ul>
