--- a/settings.html
+++ b/settings.html
@@ -21,7 +21,7 @@
         </div>
         <div class="status-bar__column">
             <!-- icon  -->
-            <span>11%</span>
+            <span>100%</span>
             <i class="fa-solid fa-battery fa-lg"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
@@ -30,14 +30,14 @@
     <header class="alt-header">
         <div class="alt-header__column">
             <a href="more.html">
-                <i class="fa-solid fa-angle-left fa-2x"></i>
+                <i class="fa-solid fa-angle-left"></i>
             </a>
         </div>
         <div class="alt-header__column">
             <h1 class="alt-header__title">Settings</h1>
         </div>
         <div class="alt-header__column">
-            <i class="fa-solid fa-search fa-2x"></i>
+            <i class="fa-solid fa-search"></i>
         </div>
     </header>
  
@@ -76,25 +76,25 @@
         <ul class="nav__list">  
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="fa-solid fa-user fa-2x"></i>
+                    <i class="fa-solid fa-user"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav_noti badge">1</span>
-                    <i class="fa-regular fa-comment fa-2x"></i>
+                    <i class="fa-regular fa-comment"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html">
-                    <i class="fas fa-magnifying-glass fa-2x"></i>
+                    <i class="fas fa-magnifying-glass"></i>
                 </a>
                 </i>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
                     <span class="nav_important dot">•</span>
-                    <i class="fa-solid fa-ellipsis fa-2x"></i>
+                    <i class="fa-solid fa-ellipsis"></i>
                 </a>
             </li>
         </ul>
