--- a/friends.html
+++ b/friends.html
@@ -21,7 +21,7 @@
         </div>
         <div class="status-bar__column">
             <!-- icon  -->
-            <span>11%</span>
+            <span>100%</span>
             <i class="fa-solid fa-battery fa-lg"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
@@ -95,25 +95,25 @@
         <ul class="nav__list">  
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="fa-solid fa-user fa-2x"></i>
+                    <i class="fa-solid fa-user fa-lg"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav_noti badge">3</span>
-                    <i class="fa-regular fa-comment fa-2x"></i>
+                    <i class="fa-regular fa-comment fa-lg"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html">
-                    <i class="fas fa-magnifying-glass fa-2x"></i>
+                    <i class="fas fa-magnifying-glass fa-lg"></i>
                 </a>
                 </i>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="#">
                     <span class="nav_important dot">•</span>
-                    <i class="fa-solid fa-ellipsis fa-2x"></i>
+                    <i class="fa-solid fa-ellipsis fa-lg"></i>
                 </a>
             </li>
         </ul>
