--- a/friends.html
+++ b/friends.html
@@ -111,7 +111,7 @@
                 </i>
             </li>
             <li class="nav__btn">
-                <a class="nav__link" href="#">
+                <a class="nav__link" href="more.html">
                     <span class="nav_important dot">•</span>
                     <i class="fa-solid fa-ellipsis fa-lg"></i>
                 </a>
